# geanyproject3

./: .gitignore  ChangeLog  Makefile.am  Makefile.am~  Makefile.in~  Makefile~  README  config.h  config.h.in~  configure.ac  configure.ac~  configure~  履歴.txt
m4/: ChangeLog
po/: ChangeLog  ja.mo  ja.po
src/: Makefile.am  geanyproject  main.c
